--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Bienvenido a la web del estudio Fotográfico Fotocol2000</h1>
-    <p>Esta es la web en la que podrás visualizar nuestros trabajos</p>    
+    <p>Esta es la web en la que podrás visualizar nuestros trabajos</p>
+    <p>Otro párrafo para hacer un nuevo commit</p>    
 </body>
 </html>
